--- a/style.css
+++ b/style.css
@@ -21,3 +21,10 @@
     border-radius: 5px;
     background-color: brown;
 }
+ .enroll button{
+    padding: 10px;
+    width: 30%;
+    border: none;
+    border-radius: 5px;
+    background-color: navy;
+}
